Hopefully the ultimate version.

--- a/MSReport/MSThesis.tex
+++ b/MSReport/MSThesis.tex
@@ -50,7 +50,7 @@
 \maketitle
 
 {\abstract
- We compare the delays experienced by packet flows when transmitted using different scheduling algorithms across a crossbar switch.  The two scheduling algorithms we consider are iterative SLIP \cite{McKeown} and QCSMA \cite{Libin}.  We first compare them under the assumptions that all packets have the same length, and then under the assumption that the half the packets have the maximum allowable length and half have the minimum allowable length.  Our findings suggest that the variation in packet length has a non-negligible effect on throughput vs delay results.  Under varying packet lengths and for long lived TCP connections, QCSMA derived schedulers seem to do only marginally better than SLIP.  In highly loaded core switches with many short-lived TCP connections, we expect to see a large improvement in delay performance of QCSMA over SLIP.}
+ We compare the delays experienced by packet flows when transmitted using different scheduling algorithms across a crossbar switch.  The two scheduling algorithms we consider are iterative SLIP \cite{McKeown} and QCSMA \cite{Libin}.  We first compare them under the assumptions that all packets have the same length, and then under the assumption that the half the packets have the maximum allowable length and half have the minimum allowable length.  Our findings suggest that the variation in packet length has a non-negligible effect on throughput vs delay results.  For long-lived TCP connections with varying packet lengths, QCSMA derived schedulers seem to do only marginally better than SLIP.  In highly loaded core switches with many short-lived TCP connections, we expect to see a large improvement in delay performance of QCSMA over SLIP.}
 
 \section{Introduction}
 Computer networks have made their way to the core of our modern lifestyles.  Almost any information can (and often must) be found on the internet.  Many of the services people use on a daily basis rely on distributed processing of requests housed in enormous datacenters scattered across the country and the world.  All these networks require good routing technologies to be used effectively.
@@ -141,27 +141,29 @@ To compare the delay performance of the different schedulers we built an event d
 
  The simulations fall into two categories: an open loop version meant to measure switch throughput, and a closed loop version meant to mimic TCP operation over the switch.  
  \subsection{Modeling Challenges}
- We encountered several technical challenges that guided our design decisions in order to accurately and efficiently simulate the functioning of a switch.  The simulator in its present form is actually the second simulator that we built to model switch performance under different traffic flows.  Initially the simulations were time driven, which allowed for a simple calculation of state evolution, but it meant we had to make some sacrifices in the accuracy of our model.  In particular the higher the resolution of a time driven simulator, the more iterations it takes to model the same amount of time.  This was a big issue, because the contention slots were only a small fraction of the time it took to send a packet across the switch.  To avoid this issue, we decided to use an event driven simulation, since it allowed us to keep the number of iterations proportional to the number of events (i.e. changes to the state of the system), not the end time of the simulation.  The main difficulty with this design choice is that the calculation of the next event can be quite complex.
+ We encountered several technical challenges that guided our design decisions.%to accurately and efficiently simulate the functioning of a switch.  
+ We chose the event driven paradigm to address the modeling limitations of an earlier time driven simulator.  The time driven simulator allowed for a simple calculation of state evolution, but required a tradeoff between efficiency of the simulation and accuracy of our model.  A time driven simulator updates the state by iterating over time steps representing some duration of real time.  The major limitation of this model is that the smallest time between any two state changes is limited by the duration represented by a time step.  Choosing to have each time step represent the smallest relevant time interval in the system is problematic, since the switches we are modeling function on two vastly different time scales: that of contention slots and that of packet transmission times.  Because packet transmissions last significantly longer than contention slots, after a crossbar schedule has been generated there are long stretches of time in which no meaningful changes in state occur.  During this time the simulation would be needlessly recalculating the system's state at every time step.
  
-For an event driven simulation it is important to generate the correct next event based on the current state.  To do this there is usually an event queue which stores the events that have yet to be applied to the system state.  This can be difficult to implement if an event added to the queue could possibly modify the events already in the queue (e.g. arrivals to the switch would affect the next scheduled transmission).  To avoid these issues, we only kept track of the next event.  We assumed that all random events were geometrically distributed as a function of the current state (to take advantage of their memorylessness), and all the deterministic events could be recalculated from the state resulting after the application of the next event.  This made bookkeeping much easier, although perhaps the constant event recalculation slowed down the simulator.
+ To avoid this wasted computation, we initially approximated the behavior of the schedulers and assumed that all packets had a uniform length.  We quickly realized that this was not capturing the significant effects we were modeling, and so decided to use an event driven simulation.  Instead of iterating over time, each iteration in an event driven simulator calculates the next event (change in system state) and the time at which it will occur.  This allows us to keep the number of iterations proportional to the number of events  without sacrificing the accuracy of our model.  The main difficulty with this design choice is that the calculation of the next event can be quite complex.
+ 
+Usually the bookkeeping in event driven simulation uses an event queue which stores all generated events that have yet to be applied to the system state.  This can be difficult to implement if an event added to the queue could modify the events already in the queue (e.g. arrivals to the switch would affect the next scheduled transmission).  To avoid these issues, we only kept track of the next event.  We assumed that all random events were geometrically distributed (and thereby memoryless) as a function of the current state.  All the deterministic events could be recalculated from the state resulting after the application of the next event.  This greatly simplified the bookkeeping.
 
-One unforeseen consequence of this approach is that only keeping the next event discarded any concurrent events, which occur with nonzero probability since the time was discretized.  This was remedied by creating a function to merge events, which discarded events that didn't coincide with the next event and created an event with both state updates if the two events coincided.  This change was extremely important as it significantly changed the outputs of the simulator.
+One unforeseen consequence of this approach is that only keeping the next event discarded any concurrent events.  (Concurrent events occur with nonzero probability since the system we are simulating operates in discrete time.)  This was remedied by creating a function to merge two events, which either discarded the later of the two events or created an event that included both state updates if the two events coincided.  This change was extremely important as it significantly changed the outputs of the simulator.
 
 \subsection{Organizational Challenges}
 In addition to modeling challenges, there were some organizational challenges to ensuring the simulator would be versatile and easy to use.  
 
-We tried to enforce a modular structure on the different functions used by the simulator.  A key to successfully doing this was the definition of the Event class.  The state of the simulator could only be modified by a well defined Event object.  Event objects then provided a common interface for all functions that simulated a given switch component.  Every existing component modeled by the simulator takes as an input the current state and outputs an Event object.  New components can be easily added by creating a function that outputs an appropriate Event given the simulators current state.  This is an especially apt abstraction, because the Event class contains the merge function, which allows any two Event objects to be combined in such a way as to produce a single valid Event that incorporates the necessary state updates.  Additional functionality can be easily added to the modeled switch by creating the appropriate functions and merging them with the most recently calculcated next event.
+We tried to enforce a modular structure on the different functions used by the simulator.  A key to successfully doing this was the definition of the Event class.  The state of the simulator could only be modified by a well defined Event object.  Event objects then provided a common interface for all functions that simulated components switch.  Every existing component modeled by the simulator takes as an input the current state and outputs an Event object.  New components can be easily added by creating a function that outputs an appropriate Event given the simulators current state.  This is an especially apt abstraction, because the Event class contains the merge function, which allows any two Event objects to be combined in such a way as to produce a single valid Event that incorporates the necessary state updates.  Additional functionality can be easily added to the modeled switch by creating the appropriate functions and merging them with the most recently calculated event.
 
-In addition to trying to modularize all the components of the simulator and giving functions a common interface, there were some organizational functions that made modifying simulations scenarios and generating new sets of data easier.  One was the creation of a single format for recording all the data: the Data\_Collector class.  Collecting new statistics of different kinds was greatly simplified as the Data\_Collection class has a standardized interface for adding data and does all the difficult storage bookkeeping (i.e. creating new arrays and maintaining them).  The other huge advantage of creating this class is that it is outfitted with a function that aggregates and writes all the collected data to an output file with a standardized format.  This greatly decreased the overhead of adjusting which statistics should be collected and adjusting what is written to the output files.
+In addition to trying to modularize all the components of the simulator and giving functions a common interface, there were some organizational functions that made modifying simulation scenarios and generating new sets of data easier.  One was the creation of a single format for recording all the data: the Data\_Collector class.  Collecting new statistics of different kinds was greatly simplified as the Data\_Collection class has a standardized interface for adding data and does all the difficult storage bookkeeping (i.e. creating new arrays and maintaining them).  The other huge advantage of creating this class is that it is outfitted with a function that aggregates and writes all the collected data to an output file with a standardized format.  This greatly decreased the overhead of adjusting which statistics should be collected and adjusting what is written to the output files.
 
-Finally another extremely useful set of functions were designed around the efficient running of simulations.  There is a function that sets up the initial parameters, a function that resets the state to the appropriate initial conditions, and a function that progress the state through a specified number events.  To run a new simulation it is only necessary to set the appropriate parameters, reset the initial conditions, and then advance the state forward the correct amount of iterations after which the generated data can be written to a file. This greatly facilitates the running of a set of related simulations without needing to manually reset the simulator.
+We created three extremely functions designed to easily set up and run simulation scenarios.  The function init\_sim() sets up the initial parameters, the function reset\_sim() reset the state to the appropriate initial conditions, and the function run\_sim() progress the system state through a specified number events.  To run a new simulation it is then only necessary to call these three functions, which allows for extremely simple semantics to run a series of simulations.
 
-As any giant coding project, there were a lot of bugs that had to be tracked down.  The use of a log which wrote error messages to a file rather than generating print statements was quite useful as it was possible to look into the operation of a loop without having an unmanageable dump to the terminal.
+As any giant coding project, there were a lot of bugs that had to be tracked down.  The use of a log which wrote error messages to a file rather than generating print statements was quite useful as it was possible to look into the operation of loops without having an unmanageable dump to the terminal.
 
-The choice of simulator language was based on a tradeoff between the desired performance and the ease of writing the code.  The main simulation loop was written in C++ as it is very fast at computing a large amount of iterations compared to a more high level language.  The outputs generated by the simulator were then fed into a Matlab script, since the graphics tools are very good and easy to use.  Since the display of the data doesn't require strenuous computation the relative inefficiency of Matlab was not an issue.
-
+The choice of simulator language was based on a tradeoff between the desired performance and the ease of writing the code.  The main simulation loop was written in C++ as it is very efficient at performing a large number of loop iterations.  Once the data is generated, efficiency is not as great a concern, so we can feed the data into a Matlab script, since the graphics tools are good and simple to use. 
  
- For more details on the simulator design please see appendix \ref{code_design}.%We go into more depth in subsequent sections.
+ For more specific details on the simulator design please see appendix \ref{code_design}.%We go into more depth in subsequent sections.
  
 \section{Open Loop Simulations} \label{open}
 
@@ -366,7 +368,7 @@ Our open loop experiments (\S\ref{open}) confirmed our intuition that there is s
 
 In contrast, the closed loop simulations (\S \ref{closed}) we considered suggest that although there is a differentiation of performance between QCSMA and SLIP, it does not seem to play a large role in many common practical scenarios.  This is partly because the congestion levels (i.e. the loads) are adequately regulated using TCP or a similar congestion control mechanism, and partly because of the low level of intercommunication loads observed in real datacenters.
 
-While in many scenarios the choice of scheduler seems to have a negligible effect, there is one key loading regime in which there is a significant gain from using QCSMA.  The open loop simulations correspond more closely to core and bottleneck switches, which receive lots of traffic from many different (possibly short-lived) TCP connections.  In this scenario the tcp regulation will not have as large an impact as short lived connections will close before their flow patterns can be significantly altered, lending a more iid open loop flavor to the packets flows.  For switches expected to operate in this loading regime there is much to be gained by choosing QCSMA over SLIP as a scheduling algorithm.
+While in many scenarios the choice of scheduler seems to have a negligible effect, there is one key loading regime in which there is a significant gain from using QCSMA.  The open loop simulations correspond more closely to core and bottleneck switches, which receive lots of traffic from a large number of short-lived TCP connections.  In this scenario the tcp regulation will not have as large an impact since short-lived connections will close before their flow patterns can be significantly altered, lending a more open loop flavor to the packets flows.  For switches expected to operate in this loading regime there is much to be gained by choosing QCSMA over SLIP as a scheduling algorithm.
 
 
 %% \begin{itemize}
